k8.v8.scripts/ako/validation/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: echoserver
  annotations:
        nodeportlocal.antrea.io/enabled: "true"
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: ClusterIP
