k8.v8.scripts/ako/validation/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echoserver
    #annotations:
    #kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: avi-lb
  rules:
  - host: "testservice1.psa.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: validation-echoserver-live
            port:
              number: 80
